# theorem-proving-template

./: .travis.yml  README.md
safe-lists/: .travis.yml  ChangeLog.md  LICENSE  safe-lists.cabal  stack.yaml
safe-lists/src/: List.hs  Main.hs  Misc.hs  Theorems.hs
safe-lists/src/Data/: List.hs  Misc.hs  Prelude.hs
safe-lists/src/Data/List/: List.hs  Theorems.hs
safe-lists/src/Theorems/: List.hs
safe-lists/tests/: Test.hs
