name:                safe-lists
version:             0.1.0.0
synopsis:            Template for Theorem Proving in Liquid Haskell
homepage:            nikivazou.github.io
license:             MIT
license-file:        LICENSE
author:              nikivazou
maintainer:          nikivazou@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Misc
                       Data.List.List
                       Theorems
  build-depends:       base >=4.9 && <4.10, liquidhaskell >=0.8 && <0.9
  hs-source-dirs:      src
  -- ghc-options:         -W -Werror
  default-language:    Haskell98

executable safe-lists
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, liquidhaskell >=0.8 && <0.9
  hs-source-dirs:      src
  -- ghc-options:         -W -Werror
  default-language:    Haskell2010

test-suite tests
  default-language:  Haskell98
  build-depends:     base >=4.9 && <4.10, process
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  ghc-options:       -W -Werror
  main-is:           Test.hs